@@ -668,3 +668,4 @@ scid-3.6.7
 - Import clipboard as game : on Unix systems the X selection is pasted only if the clipboard is empty
 - MacOS : various updates (better support) (thanks to Israel Chauca Fuentes)
 - Book : last opened book is reopened by default
+- Bug : fixed a possible crash when generating a player report when the opened base has no games (segmentation fault)
